--- a/paper.bib
+++ b/paper.bib
@@ -1774,3 +1774,119 @@ author = "G.I. Kopylov"
 	pages = "1859--1896",
 	year = "1999"
 }
+
+@article{2016BSchenke,
+   title={Novel collective phenomena in high-energy proton–proton and proton–nucleus collisions},
+   volume={25},
+   ISSN={1793-6608},
+   url={http://dx.doi.org/10.1142/S0218301316300022},
+   DOI={10.1142/s0218301316300022},
+   number={01},
+   journal={International Journal of Modern Physics E},
+   publisher={World Scientific Pub Co Pte Lt},
+   author={Dusling, Kevin and Li, Wei and Schenke, Björn},
+   year={2016},
+   month={Jan},
+   pages={1630002}
+}
+
+@article{Weller:2017tsr,
+    author = "Weller, Ryan D. and Romatschke, Paul",
+    title = "{One fluid to rule them all: viscous hydrodynamic description of event-by-event central p+p, p+Pb and Pb+Pb collisions at $\sqrt{s}=5.02$ TeV}",
+    eprint = "1701.07145",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1016/j.physletb.2017.09.077",
+    journal = "Phys. Lett. B",
+    volume = "774",
+    pages = "351--356",
+    year = "2017"
+}
+@article{Schenke:2020mbo,
+    author = "Schenke, Bjoern and Shen, Chun and Tribedy, Prithwish",
+    title = "{Running the gamut of high energy nuclear collisions}",
+    eprint = "2005.14682",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.102.044905",
+    journal = "Phys. Rev. C",
+    volume = "102",
+    number = "4",
+    pages = "044905",
+    year = "2020"
+}
+@article{Taghavi:2019mqz,
+    author = "Taghavi, Seyed Farid",
+    title = "{Smallest QCD droplet and multiparticle correlations in p-p collisions}",
+    eprint = "1907.12140",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevC.104.054906",
+    journal = "Phys. Rev. C",
+    volume = "104",
+    number = "5",
+    pages = "054906",
+    year = "2021"
+}
+@article{ATLAS:2018ngv,
+    author = "Aaboud, Morad and others",
+    collaboration = "ATLAS",
+    title = "{Correlated long-range mixed-harmonic fluctuations measured in $pp$, $p$+Pb and low-multiplicity Pb+Pb collisions with the ATLAS detector}",
+    eprint = "1807.02012",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2018-151, CERN-PH-EP-2018-151",
+    doi = "10.1016/j.physletb.2018.11.065",
+    journal = "Phys. Lett. B",
+    volume = "789",
+    pages = "444--471",
+    year = "2019"
+}
+
+@article{Schenke:2012wb,
+    author = "Schenke, Bjoern and Tribedy, Prithwish and Venugopalan, Raju",
+    title = "{Fluctuating Glasma initial conditions and flow in heavy ion collisions}",
+    eprint = "1202.6646",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    doi = "10.1103/PhysRevLett.108.252301",
+    journal = "Phys. Rev. Lett.",
+    volume = "108",
+    pages = "252301",
+    year = "2012"
+}
+@article{Schenke:2010rr,
+    author = "Schenke, Bjorn and Jeon, Sangyong and Gale, Charles",
+    title = "{Elliptic and triangular flow in event-by-event (3+1)D viscous hydrodynamics}",
+    eprint = "1009.3244",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevLett.106.042301",
+    journal = "Phys. Rev. Lett.",
+    volume = "106",
+    pages = "042301",
+    year = "2011"
+}
+Copy to ClipboardDownload
+
+@article{Rose:2020lfc,
+    author = "Rose, J. -B. and Torres-Rincon, J. M. and Elfner, H.",
+    title = "{Inclusive and effective bulk viscosities in the hadron gas}",
+    eprint = "2005.03647",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1088/1361-6471/abbc5c",
+    journal = "J. Phys. G",
+    volume = "48",
+    number = "1",
+    pages = "015005",
+    year = "2020"
+}
+
+@article{ALICE:Nchpt,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Minimum-bias and $p_\mathrm{T}$-cut pseudorapidity density in pp collisions at \sqrt{s}$ = 5.02 and 13 TeV}",
+    url = {https://alice-publications.web.cern.ch/node/6814},
+    year = "2021"
+}
