--- a/paper.tex
+++ b/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{lineno}
 %\usepackage{subcaption}
 \usepackage{subfigure}
+\usepackage{tikz}
 \usepackage[section]{placeins}
 \usepackage {multicol}% Multi column in the table
 \usepackage {multirow}% Multi row in the table
@@ -26,7 +27,7 @@
 %
 
 %%% Put your own title + short title here:
-\title{Multiplicity dependent flow and jet fragmentation in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions and their event-scale dependence}
+\title{Multiplicity dependent flow and jet fragmentation \\in pp at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at ${\sqrt{{\textit s_\mathrm{NN}}}} = 5.02$~TeV and their event-scale dependence}
 \ShortTitle{flow and jets in pp collisions in small systems}   % appears on right page headers
 
 %%% Do not change the next lines
@@ -35,7 +36,7 @@
 
 \begin{abstract}
 %\input{abstract.tex}
-Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$, and pseudorapidity separation $\Delta\eta$, using charged particles within the pseudorapidity interval $\eta < 0.9$ with 1~$ < \pt < $~4~GeV/$c$.
+Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV p--Pb collisions. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$, and pseudorapidity separation $\Delta\eta$, using charged particles within the pseudorapidity interval $\eta < 0.9$ with 1~$ < \pt < $~4~GeV/$c$.
 Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with string-shoving interactions, and hydrodynamic calculations.
 % findings , physics conclusion.
 % discovery?
