--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -4,7 +4,7 @@
 \label{sec:experiment}
 \label{sec:experiment}
 
-The analysis is performed with data samples in pp collisions at $\sqrt{s} = 13$~TeV collected from 2016 to 2018 during the LHC Run 2 period. A full description of the ALICE detector and performance in the LHC Run 2 can be found in Refs~\cite{Aamodt:2008zz,Abelev:2014ffa}. The analysis utilizes the V0~\cite{Abbas:2013taa}, the Inner Tracking System (ITS)~\cite{aliceITS}, and the Time Projection Chamber (TPC)~\cite{aliceTPC}. 
+The analysis is performed with data samples in pp collisions at $\sqrt{s} = 13$~TeV collected from 2016 to 2018 in p--Pb collisions at $\sqrt{s_\mathrm{NN}}$ in 2016 during the LHC Run 2 period. A full description of the ALICE detector and performance in the LHC Run 2 can be found in Refs~\cite{Aamodt:2008zz,Abelev:2014ffa}. The analysis utilizes the V0~\cite{Abbas:2013taa}, the Inner Tracking System (ITS)~\cite{aliceITS}, and the Time Projection Chamber (TPC)~\cite{aliceTPC}. 
 
 The V0 detector consists of two stations placed on both sides of the interaction point, V0A and V0C, each made of 32 plastic scintillator tiles, covering the full azimuthal angle within the pseudorapidity intervals $2.8 < \eta < 5.1$ and $-3.7 < \eta < -1.7$, respectively. The V0 is used to provide a minimum bias (MB) and a high-multiplicity (HM) trigger. The minimum bias trigger is obtained by a time coincidence of V0A and V0C signals. The charged particle multiplicity selection is done on the sum of the V0A and V0C signals, which is denoted as V0M. The high-multiplicity trigger requires that the V0M signal exceeds 5 times the mean value measured in minimum bias collisions, selecting the 0.1\% of MB events that have the largest V0 multiplicity. The analyzed data samples of minimum bias and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities of 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}.
 
@@ -34,16 +34,16 @@ where $\delta_{\Delta\eta}=$~0.4 is the normalization factor, the whole integrat
 
 \subsection{Extraction of flow coefficients from the Low-Multiplicity Template Fit Method}
 
-Due to the strong jet fragmentation bias in small systems it has been a difficult task to extract flow in these small systems because of the remaining non-flow in the away-side region in Eq~\ref{eq:pertrigger}. As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the high-multiplicity (HM) correlation function in a HM percentile can be expressed as 
+Due to the strong jet fragmentation bias in small systems it has been a difficult task to extract flow in these small systems because of the remaining non-flow in the away-side region ($\Delta\varphi \sim \pi$) in Eq~\ref{eq:pertrigger}. As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the high-multiplicity (HM) correlation function in a HM percentile can be expressed as 
 \begin{eqnarray}
 Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(3\Delta\varphi)) + F~Y_{\rm{LM}}(\Delta\varphi)
 \end{eqnarray}
-where $Y_{\rm{LM}}(\Delta\varphi)$ is the LM correlation function, G the normalization factor for the Fourier component up to the third harmonic, and the scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity (LM) ($60-100\%$). This method requires that $Y_{\rm{LM}}$ doesn't contain a ridge or flow in the near-side and the away-side region originates only from jet fragmentations and the jets are not modified in HM events. 
+where $Y_{\rm{LM}}(\Delta\varphi)$ is the LM correlation function, G the normalization factor for the Fourier component up to the third harmonic, and the scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity (LM) ($60-100\%$). This method requires that $Y_{\rm{LM}}$ doesn't contain a ridge or flow in the near-side and the away-side region originates from jet fragmentations and the jets are not modified in HM events. The scale factor $F$ and pedestal $G$ are fixed by the fit, and $v_{n,n}$ are calculated from a Fourier transform. 
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.6 \textwidth]{figures/Fig1_FlowExt.pdf} 
-	\caption{The template fit results with the biased LM-templates. The black markers shows the signal for the $0-0.1\%$ multiplicity percentile together with its fit shown as a blue band. The red squares correspond to the LM signal. The orange and green curves correspond to the extracted $v_2$ and $v_3$ signals, respectively.}
+	\caption{The template fit results with the biased LM-templates. The black markers shows the signal for the $0-0.1\%$ multiplicity percentile together with its fit shown as a blue band. The red squares correspond to the LM signal. The orange and green curves correspond to the extracted $v_2$ and $v_3$ signals, respectively. The $\chi^{2}$ divided by the number of degree of freedom is 0.894}
 	\label{fig:flowext}
 \end{figure}
 
@@ -53,7 +53,7 @@ v_{n}(p_{\rm{T,trig}}) = v_{n,n}(p_{\rm{T,trig}}, p_{\rm{T,assoc}}) / \sqrt{ v_{
 \end{eqnarray}
 $v_{n,n}(p_{\rm{T,assoc}},p_{\rm{T,assoc}})$ is measured in 1~$<p_{\rm{T,trig(assoc)}}<$~4~GeV/$c$ interval as the $p_{\rm{T,assoc}}$ range is fixed with 1~$<p_{\rm{T,assoc}}<$~4~GeV/$c$.
 
-Figure~\ref{fig:flowext} shows the LM-template fit results for $0-0.1\%$ multiplicity percentile pp collisions at $\sqrt{s}$ = 13 TeV. The LM yield,  $Y_{\rm{LM}}(\Delta\varphi)$, is shown in red squares, and the extracted $v_{2}$ and $v_{3}$ as orange and green respectively. The resulting scale factor $F$ in different multiplicity percentiles and systems are summarized in Tabs.~\ref{tab:Fpp} and \ref{tab:Fpb}. They are larger for pp higher multiplicity percentiles and closer to unity for p-Pb lower multiplicity percentiles. In the previous results in \cite{ALICE:2012eyl, ALICE:2013snk}, $F$ was assumed to be 1. The total fit is shown as a blue band and the signal to the fit is shown in the bottom panel. 
+Figure~\ref{fig:flowext} shows the LM-template fit results for $0-0.1\%$ multiplicity percentile pp collisions at $\sqrt{s}$ = 13 TeV. The LM yield,  $Y_{\rm{LM}}(\Delta\varphi)$, is shown in red squares, and the extracted $v_{2}$ and $v_{3}$ as orange and green respectively. The resulting scale factor $F$ in different multiplicity percentiles and systems are summarized in Tabs.~\ref{tab:Fpp} and \ref{tab:Fpb}. They are larger for pp higher multiplicity percentiles and closer to unity for p-Pb lower multiplicity percentiles. In the previous results in Refs.~\cite{ALICE:2012eyl, ALICE:2013snk}, $F$ was assumed to be 1. The total fit is shown as a blue band and the signal to the fit is shown in the bottom panel. 
 %let's add chiq value of the fit
 \begin{table}[h!]
 \caption{The scale factor $F$ for various multiplicity percentiles in pp collisions.}
@@ -97,13 +97,13 @@ Y^{near}_{\rm{frag}} = \int_{|\Delta \eta|<1.3} \left( \frac{1}{\it{N}_{\rm{trig
 The near-side jet-like yields are extracted from the near-side $\Delta\eta$ correlations, defined at $|\Delta\varphi|<$~1.3 projected on the $\Delta\eta$ axis as Eq.~\ref{eq:Ynear}. The value 1.3 is chosen as the projection range in order to fully cover $\Delta\varphi$ in Eq.~\ref{eq:pertrigger}.
 The correlations in the same jet mainly contributed to $(\Delta\eta, \Delta\varphi) \sim (0,0)$ due to similar out-going direction of particles inside the jet along the jet-axis. The jet fragmentation yield is defined by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<$~1.3 after applying the Zero-Yield-At-Minimum (ZYAM) procedure~\cite{Ajitanand:2005jj}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<$1.3, which results in pointing the minimum position to be $|\Delta\varphi|=$~1.3.
 
-The away-side jet-like yield in data is measured from the LM-template fit method as $Y^{\rm{away, HM}}_{frag} = Y^{\rm{away, LM}}_{frag} \times F$, where $F$ is again the relative contribution of the away-side jet fragmentation yield between low- and high-multiplicity events. The $Y^{\rm{away, LM}}_{frag}$ is then directly measured by integrating the away-side $\Delta\varphi$ correlation function. Since the method is not necessary for PYTHIA, where there is no flow contributions, $Y^{\rm{away}}$ is measured directly from the $\Delta\varphi$ correlation functions.
+The away-side jet-like yield in data is measured from the LM-template fit method as $Y^{\rm{away, HM}}_{frag} = Y^{\rm{away, LM}}_{frag} \times F$, where $F$ is again the relative contribution of the away-side jet fragmentation yield between low- and high-multiplicity events. The $Y^{\rm{away, LM}}_{frag}$ is then directly measured by integrating the away-side $\Delta\varphi$ correlation function. Since this method is not necessary for PYTHIA, where there is no flow contributions, $Y^{\rm{away}}$ is measured directly from the $\Delta\varphi$ correlation functions.
 
 Figure~\ref{fig:Ymult} presents the $Y^{near}_{\rm{frag}}$ and $Y^{away}_{\rm{frag}}$, for both ALICE data and PYTHIA 8 Tune 4C as a function of multiplicity percentile in pp collisions at $\sqrt{s}=13$ TeV. The transverse momentum range for trigger particles is $1<p_\mathrm{T,trig}<2$ GeV/c and for associated particles $1<p_\mathrm{T,assoc}<4$ GeV/c. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black and the away-side yields in blue.
 The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom panel. While PYTHIA overestimates ALICE data for both $Y^{near}_{\rm{frag}}$ and $Y^{away}_{\rm{frag}}$, the ratio in PYTHIA is consistent with the ALICE data in the multiplicity percentiles studied. This ratio can be explained by the pair acceptance effect caused by the limited ALICE $\eta$ acceptance~\cite{PHENIX:2006gto}, which implies that the enhanced jet yields in away-side in HM events with respect to LM events are well quantified by the LM-template method.
 
 \subsection{Event scale dependence}
-As a continuation of the extraction of the flow coefficients with the LM-template fit method, different event scale selections are investigated. By selecting events that includes a hard jet or a high-$\pt$ leading particle within the mid-rapidity region, it is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea} further. This event scale is set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity. The leading particle track requires to be within $|\eta|<0.9$ and $0<\phi<2\pi$, and the jets are reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=$~0.4 for only charged particles. In this analysis the $\pt$ scheme is used as the recombination scheme. As the leading particle tracks, the jets are selected in the full azimuthal angle ($0<\phi<2\pi$) but in an $\eta$-range of $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2~\cite{Acharya:2018eat}.
+As a continuation of the extraction of the flow coefficients with the LM-template fit method, different event scale selections are investigated. By selecting events that includes a hard jet or a high-$\pt$ leading particle within the mid-rapidity region, it is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. This event scale is set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity. The leading particle track requires to be within $|\eta|<0.9$ and $0<\phi<2\pi$, and the jets are reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=$~0.4 for only charged particles. In this analysis the $\pt$ scheme is used as the recombination scheme. As the leading particle tracks, the jets are selected in the full azimuthal angle ($0<\phi<2\pi$) but in an $\eta$-range of $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2~\cite{Acharya:2018eat}.
 
 
 
